JS input footbar
JS input footbar

--- a/templates/webviews/pat/home.html
+++ b/templates/webviews/pat/home.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <section class="content">
@@ -47,32 +48,7 @@
     </div>
   </section>
   <footer>
-    <nav class="menu">
-      <input type="radio" name="menu" id="un" checked>
-      <input type="radio" name="menu" id="deux">
-      <input type="radio" name="menu" id="trois">
-      <input type="radio" name="menu" id="quatre">
-      <input type="radio" name="menu" id="cinq">
-      <div class="list">
-        <div class="link-wrap">
-          <label for="un">
-            <i class="fa fa-home"></i>
-          </label>
-          <label for="deux">
-            <i class="fa fa-search"></i>
-          </label>
-          <label for="trois">
-            <i class="fa fa-map-marker"></i>
-          </label>
-          <label for="quatre">
-            <i class="fa fa-user"></i>
-          </label>
-          <label for="cinq">
-            <i class="fa fa-plus"></i>
-          </label>
-        </div>
-      </div>
-    </nav>
+   <nav class="navbar fixed-bottom navbar-light bg-light menu"></nav>
   </footer>
 </body>
 </html>
