Input navbar class
de tangit

--- a/templates/webviews/pat/recherche_custom.html
+++ b/templates/webviews/pat/recherche_custom.html
@@ -15,6 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+  <script src="script.js"></script>
   <style>
       #map {
         height: 50%;
@@ -112,32 +113,7 @@
     </div>
   </section>
   <footer>
-    <nav class="menu">
-      <input type="radio" name="menu" id="un" checked>
-      <input type="radio" name="menu" id="deux">
-      <input type="radio" name="menu" id="trois">
-      <input type="radio" name="menu" id="quatre">
-      <input type="radio" name="menu" id="cinq">
-      <div class="list">
-        <div class="link-wrap">
-          <label for="un">
-            <i class="fa fa-home"></i>
-          </label>
-          <label for="deux">
-            <i class="fa fa-search"></i>
-          </label>
-          <label for="trois">
-            <i class="fa fa-map-marker"></i>
-          </label>
-          <label for="quatre">
-            <i class="fa fa-user"></i>
-          </label>
-          <label for="cinq">
-            <i class="fa fa-plus"></i>
-          </label>
-        </div>
-      </div>
-    </nav>
+    <nav class="navbar fixed-bottom navbar-light bg-light menu"></nav>
   </footer>
 </body>
 </html>
