--- a/templates/webviews/pat/home.html
+++ b/templates/webviews/pat/home.html
@@ -16,7 +16,7 @@
   <section class="content">
     <h1>ACTUALITÉS</h1>
     <div class="filactu">
-      <h2>Un contenu à découvrir à côté de chez vous<h2>
+      <h2>Un contenu à découvrir à côté de chez vous</h2>
       <p>Dans la rubrique architecture par <span><i>La Commune</i></span>Soyez le premier à le noter !</p>
       <div class="btn-group" role="group" aria-label="...">
         <i class="fa fa-heart"> 43</i>
@@ -27,7 +27,7 @@
     </div>
     <br>
     <div class="filactu">
-      <h2>Une nouvelle rubrique « Paris coquin » à découvrir<h2>
+      <h2>Une nouvelle rubrique « Paris coquin » à découvrir</h2>
       <p>Il n’y a pas que Pigalle en quartier chaud à Paris. Redécouvrez Paris à travers les époques et les lieux dans cet itinéraire thématique très hot.</p>
       <div class="btn-group" role="group" aria-label="...">
         <i class="fa fa-heart"> 43</i>
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="filactu">
-      <h2>Itinéraire Eiffel<h2>
+      <h2>Itinéraire Eiffel</h2>
       <p>Des fontaines aux bouches de métro, un point commun : l'art Nouveau et ses ferrures</p>
       <div class="btn-group" role="group" aria-label="...">
         <i class="fa fa-heart"> 43</i>
