--- a/templates/webviews/flore/autourdemoi.html
+++ b/templates/webviews/flore/autourdemoi.html
@@ -19,6 +19,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd2p7r0jh2apbfUvJWw1THUJTbr0wAziI&callback=initMap" type="text/javascript"></script>
     <script async type="text/javascript">
+        <title>Autour de moi</title>
         var lat = 48.852969;
         var lon = 2.349903;
         var map = null;
@@ -38,8 +39,13 @@
             }
 
             var contentString1 = '<div id="content">' + '<div id="siteNotice">' + '</div>' + '<h1 id="firstHeading" class="firstHeading">test</h1>' + '<div id="bodyContent">' + '<p><b>test</b>.</p>' + '<p>Attribution: Google, <a href="https://www.google.fr">' + 'https://www.google.fr</a> ' + '(last visited June 22, 2009).</p>' + '</div>' + '</div>';
-            var infowindow = new google.maps.InfoWindow({ content: contentString1 }, { map: map });
-            var image = {url: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',size: new google.maps.Size(20, 32)}
+            var infowindow = new google.maps.InfoWindow({ content: contentString1, map: map , maxWidth:200});
+            var image = {
+                         path: "M27.648-41.399q0-3.816-2.7-6.516t-6.516-2.7-6.516 2.7-2.7 6.516 2.7 6.516 6.516 2.7 6.516-2.7 2.7-6.516zm9.216 0q0 3.924-1.188 6.444l-13.104 27.864q-.576 1.188-1.71 1.872t-2.43.684-2.43-.684-1.674-1.872l-13.14-27.864q-1.188-2.52-1.188-6.444 0-7.632 5.4-13.032t13.032-5.4 13.032 5.4 5.4 13.032z",
+                         fillColor: '#2699FB',
+                         fillOpacity: 1,
+                         strokeWeight: 0,
+                         scale: 0.65 }};
             
             var tableau = [];
 
@@ -155,7 +161,6 @@
             margin: 0;
         }
     </style>
-    <title>BratislavaMarkers</title>
 </head>
 
 <body>
