--- a/templates/webviews/tanguy/bratislava.html
+++ b/templates/webviews/tanguy/bratislava.html
@@ -36,7 +36,6 @@
             <button class="alert-link close-alert">ok</button>
         </div>
 
-        <div class="interface ecrire">
             <div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -56,13 +55,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="interface photo">
+
             <div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -77,13 +75,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="interface video">
+
+
             <div class="modal fade" id="Modal-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel2">Modal title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -98,13 +96,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="interface video">
+
+
             <div class="modal fade" id="Modal-4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                         <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <h5 class="modal-title" id="exampleModalLabel3">Modal title</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                             </button>
@@ -119,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
     </section>
     <footer>
             <nav class="navbar fixed-bottom navbar-light bg-light menu"></nav>
