--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    {% block stylesheets %}{% endblock %}
-</head>
-<body>
-{% block body %}
-    <div id="app">Oups... Problème</div>
-{% endblock %}
+   <head>
+           <meta charset="UTF-8">
+           <title>{% block title %}Welcome!{% endblock %}</title>
+           {% block stylesheets %}
+               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+           {% endblock %}
+       </head>
+   <body>
+   <div id="app">
+           {% block body %}{% endblock %}
+       </div>
 
-{% block javascripts %}
-    <script src="{{ asset('js/main.js') }}"></script>
-{% endblock %}
-</body>
+   {% block javascripts %}
+           <script src="{{ asset('build/js/app.js') }}"></script>
+       {% endblock %}
+
+   </body>
 </html>
