--- a/templates/webviews/flore/autourdemoi.html
+++ b/templates/webviews/flore/autourdemoi.html
@@ -19,8 +19,8 @@
         crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd2p7r0jh2apbfUvJWw1THUJTbr0wAziI&callback=initMap" type="text/javascript"></script>
     <script async type="text/javascript">
-        var lat = 48.852969;
-        var lon = 2.349903;
+        var lat = 48.830414;
+        var lon = 2.333333;
         var map = null;
         function initMap() {
             map = new google.maps.Map(document.getElementById("map"), {
@@ -161,7 +161,7 @@
             margin: 0;
         }
     </style>
-    <title>BratislavaMarkers</title>
+    <title>Autour de moi</title>
 </head>
 
 <body>
