--- a/templates/webviews/pat/style.css
+++ b/templates/webviews/pat/style.css
@@ -24,12 +24,16 @@ html, body {
   align-items:stretch;
   width:90%;
   margin:0 5%;
-  position: pole;
-  top:1em;
+  position: relative;
+  top:3em;
   justify-content: space-between;
 }
 
 /*CSS de la page profil*/
+iframe {
+  width:100%;
+	height:auto;
+}
 
 header nav {
 	width:100%;
@@ -99,13 +103,14 @@ h1 {
   font-size: 1.2rem;
   font-weight:100;
 }
-/*boutons de partage page home*/
-.btn-group {
+/*boutons de partage*/
+.filactu .btn-group {
   overflow: auto;
   white-space: nowrap;
   display:flex;
   justify-content: space-between;
 }
+
 /*tags thématiques de la page recherche*/
 div.scrollmenu {
     overflow: auto;
@@ -143,14 +148,13 @@ input[name="menu"]{
     display:none;
 }
 
-
 .menu {
   position: fixed;
   bottom: 0;
   width: 100%;
   color: black;
-
 }
+
 .list{
 	width: 100%;
 	height: 56px;
@@ -207,6 +211,46 @@ margin:0.4em 0;
 font-size:0.6rem;
 }
 
+.contributeur .btn-group {
+  overflow: auto;
+  white-space: nowrap;
+  display:flex;
+  justify-content:flex-end;
+  position: relative;
+}
+
+.contributeur {
+  padding: 0 0.6em ;
+  margin:0.4em 0;
+  font-size:0.6rem;
+  padding: 0 0.6em ;
+  margin:0.4em 0;
+}
+
+.descriptif {
+  padding: 0 0.6em ;
+  margin:0.4em 0;
+  font-size:0.7rem;
+}
+
+.descriptif .btn-group {
+  overflow: auto;
+  white-space: nowrap;
+  display:flex;
+  justify-content: space-between;
+  font-size:0.8rem;
+
+}
+
+.descriptif .btn-group.coucou{
+justify-content: flex-end;
+}
+
+.fa-user-circle{
+  font-size: 1rem;
+  margin:auto 0.5em;
+}
+
 #demo{
   display: flex;
   flex-flow: row nowrap;
@@ -220,14 +264,14 @@ font-size:0.6rem;
 
 /* The slider itself */
 .slider {
-    -webkit-appearance: none;  /* Override default CSS styles */
-    appearance: none;
-    width: 20%; /* Full-width */
-    height: 25px; /* Specified height */
-    outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-    transition: opacity .2s;
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 20%; /* Full-width */
+  height: 25px; /* Specified height */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
 }
 
 /* Mouse-over effects */
