intégration contenu Patrick

--- a/templates/webviews/pages/vue.html
+++ b/templates/webviews/pages/vue.html
@@ -213,7 +213,36 @@
 
     </section>
 </script>
-        
+
+<script type="x-template" id="contenu">
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/kgvcuUYjssU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <div class="contributeur">
+      <div class="btn-group" role="group" aria-label="...">
+        <i class="fas fa-user-circle"></i>
+        <p>Amis de la Commune</p>
+        <i class="fas fa-check"></i>
+      </div>
+    </div>
+    <div class="descriptif">
+      <div class="btn-group" role="group" aria-label="...">
+        <i class="fa fa-quote-left"></i>
+      </div>
+      <p>La rue du Merle moqueur est connue pour ses rues pavées et ses bars, mais elle a été l’objet de nombreux affrontements, des barricades se dressaient au croisement de la rue…</p>
+      <div class="btn-group" role="group" aria-label="...">
+        <i class="fa fa-quote-right"></i>
+      </div>
+      <br>
+      <div class="btn-group" role="group" aria-label="...">
+        <i class="fa fa-share-alt"> 43</i>
+        <i class="fa fa-commenting"> 98</i>
+        <i class="fa fa-thumbs-up"> 32</i>
+        <i class="fa fa-thumbs-down"> 56</i>
+      </div>
+    </div>
+</script>
+
 <script type="x-template" id="nope">
     <div class="jumbotron">
         <h3>Nope</h3>
