--- a/templates/webviews/pages/vue.html
+++ b/templates/webviews/pages/vue.html
@@ -28,7 +28,7 @@
 </div>
 
 <script type="x-template" id="accueil">
-    <section class="content">
+    <section class="homeContainer">
         <h1>ACTUALITÉS</h1>
         <div class="filactu">
           <h2>Un contenu à découvrir à côté de chez vous<h2>
@@ -65,7 +65,7 @@
 </script>
 
 <script type="x-template" id="recherche">
-    <div>
+    <section class="rechercheContainer">
         <div class="card">
             <img class="card-img-top" src="https://images.unsplash.com/photo-1481349518771-20055b2a7b24?dpr=1&auto=compress,format&fit=crop&w=1200&h=600&q=60&cs=tinysrgb&crop=" alt="Card image cap">
             <div class="card-block">
@@ -74,7 +74,7 @@
                 <router-link :to="{name: 'nope'}" class="btn btn-primary">Go somewhere</router-link>
             </div>
         </div>
-    </div>
+    </section>
 </script>
 
 <script type="x-template" id="carte">
@@ -84,7 +84,7 @@
 </script>
 
 <script type="x-template" id="profil">
-    <section class="content">
+    <section class="profilContainer">
         <div class="filactu">
           <h2>Mes succès</h2>
           <p>Vous avez presque déverrouillé tous les succès du voisinage. Continuez comme ça !</p>
@@ -113,7 +113,7 @@
 </script>
     
 <script type="x-template" id="contribuer">
-    <section class="content">
+    <section class="contribuerContainer">
         <a class="retour" href=""><i class="fa fa-chevron-left"></i></a>
         <h1>Ajouter un contenu</h1>
         <ul>
@@ -215,14 +215,15 @@
 </script>
 
 <script type="x-template" id="contenu">
+    <section class="contenuContainer">
     <div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kgvcuUYjssU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div class="contributeur">
       <div class="btn-group" role="group" aria-label="...">
-        <i class="fas fa-user-circle"></i>
+        <i class="fa fa-user-circle"></i>
         <p>Amis de la Commune</p>
-        <i class="fas fa-check"></i>
+        <i class="fa fa-check"></i>
       </div>
     </div>
     <div class="descriptif">
@@ -241,6 +242,7 @@
         <i class="fa fa-thumbs-down"> 56</i>
       </div>
     </div>
+</section>
 </script>
 
 <script type="x-template" id="nope">
