--- a/templates/webviews/pat/recherche_custom.html
+++ b/templates/webviews/pat/recherche_custom.html
@@ -16,7 +16,7 @@
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   <script src="script.js"></script>
-  
+
   <script>
       function initMap() {
 
@@ -87,7 +87,7 @@
       <button type="button" class="btn btn-default">street art</button>
       <button type="button" class="btn btn-primary">histoire</button>
       <button type="button" class="btn btn-primary">architecture</button>
-      <button type="button" class="btn btn-primary">XIX° siècle</button>
+      <button type="button" class="btn btn-default">XIX° siècle</button>
       <button type="button" class="btn btn-primary">Paris coquin</button>
       <button type="button" class="btn btn-primary">insolite</button>
     </div>
