--- a/templates/webviews/pat/style.css
+++ b/templates/webviews/pat/style.css
@@ -116,6 +116,8 @@ div.scrollmenu {
     overflow: auto;
     display:flex;
     white-space: nowrap;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
 }
 
 div.scrollmenu button {
@@ -123,6 +125,7 @@ div.scrollmenu button {
     text-align: center;
     margin: 0 0.1em;
     text-decoration: none;
+
   }
 
 /*champ de recherche extensible*/
@@ -164,10 +167,10 @@ input[name="menu"]{
 .list .link-wrap{
 	width: 100%;
 	height: 100%;
-    display: flex;
-    flex-flow:row nowrap;
-    align-items: stretch;
-    justify-content:space-around;
+  display: flex;
+  flex-flow:row nowrap;
+  align-items: stretch;
+  justify-content:space-around;
 }
 
 .list .link-wrap>label{
@@ -175,8 +178,8 @@ input[name="menu"]{
 	width: 25%;
 	font-size: 1.75rem;
 	cursor: pointer;
-    text-align: center;
-    margin:auto 0;
+  text-align: center;
+  margin:auto 0;
 }
 .list .link-wrap>label[for="trois"]{
     font-size:3rem;
@@ -242,9 +245,9 @@ font-size:0.6rem;
 
 }
 
-.descriptif .btn-group.coucou{
+/*.descriptif .btn-group.coucou{
 justify-content: flex-end;
-}
+}*/
 
 .fa-user-circle{
   font-size: 1rem;
