début passage en composants

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,12 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-       <div class="text-center">
-           <h3>Bratislava represente</h3>
-
-           <div class="jumbotron text-center">
-                   <example></example>
-               </div>
-       </div>
-
+    <h1>Hello App!</h1>
+    <p>
+        <router-link to="/foo">Go to Foo</router-link>
+        <router-link to="/bar">Go to Bar</router-link>
+    </p>
+    <router-view></router-view>
 {% endblock %}
