--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
            <title>{% block title %}Welcome!{% endblock %}</title>
            {% block stylesheets %}
                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+                <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
            {% endblock %}
        </head>
    <body>
@@ -14,6 +15,8 @@
 
    {% block javascripts %}
            <script src="{{ asset('build/js/app.js') }}"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
        {% endblock %}
 
    </body>
