--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
-   <head>
-           <meta charset="UTF-8">
+   
+<head>
+           
+    <meta charset="UTF-8">
            <title>{% block title %}Welcome!{% endblock %}</title>
            {% block stylesheets %}
-               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-                <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+               
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
            {% endblock %}
-       </head>
-   <body>
-   <div id="app">
+       
+</head>
+   
+<body>
+   
+<div id="app">
            {% block body %}{% endblock %}
-       </div>
+       
+</div>
 
    {% block javascripts %}
-           <script src="{{ asset('build/js/app.js') }}"></script>
+           
+    <script src="{{ asset('build/js/app.js') }}"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
        {% endblock %}
 
-   </body>
+   
+</body>
 </html>
