--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,10 +1,27 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-    <h1>Hello App!</h1>
-    <p>
-        <router-link to="/foo">Go to Foo</router-link>
-        <router-link to="/bar">Go to Bar</router-link>
-    </p>
+    <h1>Bratislava</h1>
+
+    <nav class="navbar">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <router-link to="/accueil" class="nav-link" active-class="active"><i class="fa fa-home"></i></router-link>
+        </li>
+        <li class="nav-item">
+            <router-link to="/rechercher" class="nav-link" active-class="active"><i class="fa fa-search"></i></router-link>
+        </li>
+        <li class="nav-item">
+            <router-link to="/carte" class="nav-link" active-class="active"><i class="fa fa-map-marker"></i></router-link>
+        </li>
+        <li class="nav-item">
+            <router-link to="/profil" class="nav-link" active-class="active"><i class="fa fa-user"></i></router-link>
+        </li>
+        <li class="nav-item">
+            <router-link to="/contribuer" class="nav-link" active-class="active"><i class="fa fa-plus"></i></router-link>
+        </li>
+    </ul>
+    </nav>
+
     <router-view></router-view>
 {% endblock %}
