--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+
            {% endblock %}
        
 </head>
@@ -23,10 +24,13 @@
 </div>
 
    {% block javascripts %}
-           
+
     <script src="{{ asset('build/js/app.js') }}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkHwJPvvVaX0eC2S1XHKuwuDjePSS2uTs&callback=initMap"
+            async defer></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
        {% endblock %}
 
    
