--- a/templates/webviews/pages/style.css
+++ b/templates/webviews/pages/style.css
@@ -23,6 +23,18 @@ body, header, nav, section, footer {
     padding-bottom:2rem;
     overflow:scroll;
 }
+#app .logo {
+    position: fixed;
+    top:0;
+    right:0;
+    width:5rem;
+    height:5rem;
+    opacity:0.5;
+}
+#app .logo img {
+    width:100%;
+    height:100%;
+}
 .navbar{
 	width: 100%;
 	height: 2rem;
@@ -74,6 +86,10 @@ a.active {
     left:0;
     margin:0.5rem;
     padding:0.5rem;
+}
+.contribuerContainer textarea {
+    width:100%;
+    height:100%;
 }
 .contribuerContainer h1 {
     font-size:1rem;
