--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,10 @@
 </head>
    
 <body>
+<div class="bandeau">Bratislava</div>
    
 <div id="app">
+
            {% block body %}{% endblock %}
        
 </div>
